--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,6 @@ php:
   - 5.4
   - 5.5
   - 5.6
-  - hhvm
 
 before_script:
   ## PHP_CodeSniffer
@@ -31,8 +30,8 @@ script:
   ## PHP Copy/Paste Detector
   - php phpcpd.phar --verbose lib
   ## PHP Mess Detector
-  - phpmd lib text cleancode
-  ##- phpmd lib text codesize
+  ## - phpmd lib text cleancode
+  ## - phpmd lib text codesize
   ## - phpmd lib text controversial
   ## - phpmd lib text naming
   - phpmd lib text unusedcode
